force-app/main/default/objects/Account/fields/Activos_cuentas__c.field-meta.xml
<CustomField>
    <fullName>Activos_cuentas__c</fullName>
    <label>Activos cuentas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>