force-app/main/default/objects/Account/fields/ActOn__AccountId18Char__c.field-meta.xml
<CustomField>
    <fullName>ActOn__AccountId18Char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId18Char</label>
    <type>Text</type>
</CustomField>