force-app/main/default/objects/Account/fields/Alianzas_Partners_Partner_2__c.field-meta.xml
<CustomField>
    <fullName>Alianzas_Partners_Partner_2__c</fullName>
    <label>Alianzas Partners - Partner 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>