force-app/main/default/objects/Account/fields/Alianzas_UTEs_Compania_1__c.field-meta.xml
<CustomField>
    <fullName>Alianzas_UTEs_Compania_1__c</fullName>
    <label>Alianzas UTEs - Compañía 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>