force-app/main/default/objects/Account/fields/BLoqueada__c.field-meta.xml
<CustomField>
    <fullName>BLoqueada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Esta cuenta esta bloqueada por lo que no se podrán realizar gestiones sobre la misma.</description>
    <label>Bloqueada</label>
    <type>Checkbox</type>
</CustomField>