force-app/main/default/objects/Account/fields/C1_Fecha_fin__c.field-meta.xml
<CustomField>
    <fullName>C1_Fecha_fin__c</fullName>
    <label>Contrato 1 - Fecha fin</label>
    <type>Date</type>
</CustomField>