force-app/main/default/objects/Account/fields/C1_Fecha_inicio__c.field-meta.xml
<CustomField>
    <fullName>C1_Fecha_inicio__c</fullName>
    <label>Contrato 1 - Fecha inicio</label>
    <type>Date</type>
</CustomField>