force-app/main/default/objects/Account/fields/C1_Importe__c.field-meta.xml
<CustomField>
    <fullName>C1_Importe__c</fullName>
    <inlineHelpText>K€</inlineHelpText>
    <label>Contrato 1 - Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>