force-app/main/default/objects/Account/fields/C1_Nombre_del_Contrato__c.field-meta.xml
<CustomField>
    <fullName>C1_Nombre_del_Contrato__c</fullName>
    <label>Contrato 1 - Nombre del Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>