force-app/main/default/objects/Account/fields/C2_Fecha_fin__c.field-meta.xml
<CustomField>
    <fullName>C2_Fecha_fin__c</fullName>
    <label>Contrato 2 - Fecha fin</label>
    <type>Date</type>
</CustomField>