force-app/main/default/objects/Account/fields/C2_Fecha_inicio__c.field-meta.xml
<CustomField>
    <fullName>C2_Fecha_inicio__c</fullName>
    <label>Contrato 2 - Fecha inicio</label>
    <type>Date</type>
</CustomField>