force-app/main/default/objects/Account/fields/C2_FTEs__c.field-meta.xml
<CustomField>
    <fullName>C2_FTEs__c</fullName>
    <label>Contrato 2 - FTEs</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>