force-app/main/default/objects/Account/fields/C2_Linea_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>C2_Linea_de_Servicio__c</fullName>
    <label>Contrato 2 - Línea de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Horizontal</valueSetName>
    </valueSet>
</CustomField>