force-app/main/default/objects/Account/fields/C2_Situacion_prorroga__c.field-meta.xml
<CustomField>
    <fullName>C2_Situacion_prorroga__c</fullName>
    <label>Contrato 2 - Situación (prórroga…)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>