force-app/main/default/objects/Account/fields/C3_Fecha_fin__c.field-meta.xml
<CustomField>
    <fullName>C3_Fecha_fin__c</fullName>
    <label>Contrato 3 - Fecha fin</label>
    <type>Date</type>
</CustomField>