force-app/main/default/objects/Account/fields/C3_Fecha_inicio__c.field-meta.xml
<CustomField>
    <fullName>C3_Fecha_inicio__c</fullName>
    <label>Contrato 3 - Fecha inicio</label>
    <type>Date</type>
</CustomField>