force-app/main/default/objects/Account/fields/C3_FTEs__c.field-meta.xml
<CustomField>
    <fullName>C3_FTEs__c</fullName>
    <label>Contrato 3 - FTEs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>