force-app/main/default/objects/Account/fields/Campanas_industria__c.field-meta.xml
<CustomField>
    <fullName>Campanas_industria__c</fullName>
    <label>Campañas industria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>