force-app/main/default/objects/Account/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <inlineHelpText>Clasificación del cliente según Importancia para Ayesa: 
A: Alta
B: Media
C:Baja</inlineHelpText>
    <label>Categoría</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>