force-app/main/default/objects/Account/fields/Censo__c.field-meta.xml
<CustomField>
    <fullName>Censo__c</fullName>
    <label>Censo</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>