force-app/main/default/objects/Account/fields/CIF_NIF__c.field-meta.xml
<CustomField>
    <fullName>CIF_NIF__c</fullName>
    <label>CIF/NIF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>