force-app/main/default/objects/Account/fields/Clase_de_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Clase_de_cuenta__c</fullName>
    <defaultValue>&apos;Resto&apos;</defaultValue>
    <label>Clase de cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aspiracional</fullName>
            </value>
            <value>
                <fullName>Clientes</fullName>
            </value>
            <value>
                <fullName>Resto</fullName>
                <isActive>false</isActive>
                <label>Resto</label>
            </value>
            <value>
                <fullName>SC</fullName>
                <default>true</default>
                <label>SC</label>
            </value>
            <value>
                <fullName>Top</fullName>
                <label>Top Clientes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>