force-app/main/default/objects/Account/fields/Clasificacion_CLIs_SME__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_CLIs_SME__c</fullName>
    <label>Clasificación CLIs SME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
            </value>
            <value>
                <fullName>NCLI</fullName>
            </value>
            <value>
                <fullName>Inactiva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>