force-app/main/default/objects/Account/fields/CLI_CNO__c.field-meta.xml
<CustomField>
    <fullName>CLI_CNO__c</fullName>
    <label>CLI / CNO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>CLIs</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CNOs</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>NCLI</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>INACTIVO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>