force-app/main/default/objects/Account/fields/Cliente_recurrente__c.field-meta.xml
<CustomField>
    <fullName>Cliente_recurrente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente recurrente</label>
    <type>Checkbox</type>
</CustomField>