force-app/main/default/objects/Account/fields/Cliente_S_N__c.field-meta.xml
<CustomField>
    <fullName>Cliente_S_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente S/N?</label>
    <type>Checkbox</type>
</CustomField>