force-app/main/default/objects/Account/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Código Cuenta</label>
    <type>AutoNumber</type>
</CustomField>