force-app/main/default/objects/Account/fields/Codigo_Organizacion__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Organizacion__c</fullName>
    <description>Guarda el id de la organización</description>
    <label>Código Organización</label>
    <length>50</length>
    <type>Text</type>
</CustomField>