force-app/main/default/objects/Account/fields/Codigo_Pais__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Pais__c</fullName>
    <label>Codigo País</label>
    <length>3</length>
    <type>Text</type>
</CustomField>