force-app/main/default/objects/Account/fields/Codigo_provincia__c.field-meta.xml
<CustomField>
    <fullName>Codigo_provincia__c</fullName>
    <label>Codigo provincia</label>
    <length>10</length>
    <type>Text</type>
</CustomField>