force-app/main/default/objects/Account/fields/Codigo_Sector_texto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Sector_texto__c</fullName>
    <description>Se guarda el id de la paramétrica</description>
    <label>Código Sector texto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>