force-app/main/default/objects/Account/fields/Codigo_Subsector_texto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Subsector_texto__c</fullName>
    <description>Guarda el id de la paramétrica</description>
    <label>Código Subsector texto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>