force-app/main/default/objects/Account/fields/Contacto_Principal__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto Principal</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>