force-app/main/default/objects/Account/fields/Contratos_actuales__c.field-meta.xml
<CustomField>
    <fullName>Contratos_actuales__c</fullName>
    <label>Contratos actuales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>