force-app/main/default/objects/Account/fields/Cuenta_principal_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_principal_ID_18__c</fullName>
    <formula>CASESAFEID( Parent.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta principal ID 18</label>
    <type>Text</type>
</CustomField>