force-app/main/default/objects/Account/fields/Desactivar__c.field-meta.xml
<CustomField>
    <fullName>Desactivar__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box to deactivate the account</inlineHelpText>
    <label>Desactivar</label>
    <type>Checkbox</type>
</CustomField>