force-app/main/default/objects/Account/fields/Divisa__c.field-meta.xml
<CustomField>
    <fullName>Divisa__c</fullName>
    <description>Tiene que tener los mismo registros que el campo divisa de la entidad Oportunidad.</description>
    <label>Divisa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Balboa</fullName>
            </value>
            <value>
                <fullName>Dolar</fullName>
            </value>
            <value>
                <fullName>Euro</fullName>
            </value>
            <value>
                <fullName>Nuevo Sol</fullName>
            </value>
            <value>
                <fullName>Peso(CLP)</fullName>
            </value>
            <value>
                <fullName>Peso (COP)</fullName>
            </value>
            <value>
                <fullName>Peso(MXN)</fullName>
            </value>
            <value>
                <fullName>Pound Sterling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>