force-app/main/default/objects/Account/fields/DM_Contacto2__c.field-meta.xml
<CustomField>
    <fullName>DM_Contacto2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision makers - Contacto 2</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>El contacto tiene que estar relacionado con la cuenta</errorMessage>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.ParentId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cuentas (Decision makers - Contacto 2)</relationshipLabel>
    <relationshipName>Cuentas2</relationshipName>
    <type>Lookup</type>
</CustomField>