force-app/main/default/objects/Account/fields/Enterprise_Microsoft__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Microsoft__c</fullName>
    <inlineHelpText>M€</inlineHelpText>
    <label>Ingresos Enterprise Platforms-Microsoft</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>