force-app/main/default/objects/Account/fields/Es_propietario__c.field-meta.xml
<CustomField>
    <fullName>Es_propietario__c</fullName>
    <formula>$User.Id = Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es propietario</label>
    <type>Checkbox</type>
</CustomField>