force-app/main/default/objects/Account/fields/GUIDCUENTA__c.field-meta.xml
<CustomField>
    <fullName>GUIDCUENTA__c</fullName>
    <description>Identificador del registro en CLIP.</description>
    <label>GUIDCUENTA</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>