force-app/main/default/objects/Account/fields/Ingresos__c.field-meta.xml
<CustomField>
    <fullName>Ingresos__c</fullName>
    <inlineHelpText>M€. Mes anterior en curso</inlineHelpText>
    <label>Ingresos para AYESA 2024</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>