force-app/main/default/objects/Account/fields/Ingresos_AA__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_AA__c</fullName>
    <inlineHelpText>M€</inlineHelpText>
    <label>Ingresos para AYESA 2023</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>