force-app/main/default/objects/Account/fields/Ingresos_Business_Operations__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_Business_Operations__c</fullName>
    <inlineHelpText>M€</inlineHelpText>
    <label>Ingresos Business Operations</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>