force-app/main/default/objects/Account/fields/Ingresos_C_I__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_C_I__c</fullName>
    <inlineHelpText>M€</inlineHelpText>
    <label>Ingresos Cloud &amp; Infraestructure</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>