force-app/main/default/objects/Account/fields/Ingresos_Cibersecurity__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_Cibersecurity__c</fullName>
    <inlineHelpText>M€</inlineHelpText>
    <label>Ingresos Cibersecurity</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>