force-app/main/default/objects/Account/fields/Ingresos_Data_AI__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_Data_AI__c</fullName>
    <inlineHelpText>M€</inlineHelpText>
    <label>Ingresos Data &amp; AI</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>