force-app/main/default/objects/Account/fields/Ingresos_DI_AS__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_DI_AS__c</fullName>
    <inlineHelpText>M€</inlineHelpText>
    <label>Ingresos Digital Impact &amp; Application Se</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>