force-app/main/default/objects/Account/fields/Ingresos_MW_EUS__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_MW_EUS__c</fullName>
    <inlineHelpText>M€</inlineHelpText>
    <label>Ingresos Modern Workplace &amp; End-User Sup</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>