force-app/main/default/objects/Account/fields/Ingresos_SAP__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_SAP__c</fullName>
    <inlineHelpText>M€</inlineHelpText>
    <label>Ingresos Enterprise Platforms - SAP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>