force-app/main/default/objects/Account/fields/linkedin__c.field-meta.xml
<CustomField>
    <fullName>linkedin__c</fullName>
    <label>linkedin</label>
    <length>150</length>
    <type>Text</type>
</CustomField>