force-app/main/default/objects/Account/fields/Literal_Pais_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Literal_Pais_Oportunidad__c</fullName>
    <label>Literal Pais Oportunidad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>