force-app/main/default/objects/Account/fields/MES__c.field-meta.xml
<CustomField>
    <fullName>MES__c</fullName>
    <label>MES</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>CLI</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CNO</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>NC</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>N/R</label>
            </value>
            <value>
                <fullName>175540000</fullName>
                <label>Cli indirecto</label>
            </value>
            <value>
                <fullName>175540002</fullName>
                <label>Cambio de partner</label>
            </value>
            <value>
                <fullName>175540005</fullName>
                <label>Distribuido</label>
            </value>
            <value>
                <fullName>175540001</fullName>
                <label>-</label>
            </value>
            <value>
                <fullName>CLI/CON</fullName>
                <isActive>false</isActive>
                <label>CLI/CON</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>