force-app/main/default/objects/Account/fields/Motivo_bloqueo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_bloqueo__c</fullName>
    <label>Motivo bloqueo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>