force-app/main/default/objects/Account/fields/Numero_de_Sedes__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Sedes__c</fullName>
    <label>Número Sedes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>