force-app/main/default/objects/Account/fields/Numero_dispositivos_moviles__c.field-meta.xml
<CustomField>
    <fullName>Numero_dispositivos_moviles__c</fullName>
    <label>Número dispositivos móviles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>